# MVC_example

./: CMakeLists.txt  dataMeasure.cpp  dataMeasure.h  delegate001.cpp  delegate001.h  delegate002.cpp  delegate002.h  modelMeasure.cpp  modelMeasure.h  widget.cpp  widget.h  widget.ui
